# TraceBuilder

./: .gitignore  CMakeLists.txt  README.md  Untitled Diagram(2).drawio  main.cpp  test.py
components/arch/: decoder.cpp  decoder.h  dep.cpp  dep.h  mop_base.cpp  mop_base.h  mop_base.h~  uop_base.cpp  uop_base.h
components/arch/x86/: prebuilt
components/arch/x86/template/: gen.py
components/inst/: instr.cpp  instr.h  instr_model.cpp  instr_model.h  operand.cpp  operand.h  rtInstr.cpp  rtInstr.h
components/inst_model/: instr_model_mng.cpp  instr_model_mng.h  opcode.h  operand.cpp  operand.h  rt_instr.cpp  rt_instr.h
components/memMap/: MemMng.cpp  MemMng.h  memMap.cpp  memMap.h
components/regMap/: regMapper.cpp  regMapper.h
components/thread_model/: thread_model.cpp  thread_model.h
components/tracerFrontEnd/: staticIdx.h
components/uop/: decoder.h  dep.cpp  dep.h  uop_base.cpp  uop_base.h
components/uop/x86/: built.txt  prebuilt
core/: core.cpp  core.h  trace_manager.cpp  trace_manager.h
core/resMng/memMng/: MemMng.cpp
core/resMng/regMap/: regMapper.cpp  regMapper.h
core/resultFrontEnd/: resultFed.cpp  resultFed.h
core/resultFrontEnd/legacyGem5/: resultFed_gemLagacy.cpp  resultFed_gemLagacy.h
core/tracerFrontEnd/: dynTraceVar.h  staticTraceVar.h  traceToolFed.cpp  traceToolFed.h
core/tracerFrontEnd/legacyPin/: lagacy_pin.cpp  lagacy_pin.h
core/tracers/: tracer.cpp  tracer.h  uop_wd.cpp  uop_wd.h
frontEnd/: pModel.py  pModel2.py  testRun.py  testRuntbdG5.py
intelAnalyzer/prototest/: prototest.vtuneproj
intelAnalyzer/prototest/r000hs/: r000hs.vtune
intelAnalyzer/prototest/r000hs/config/: collection.cfg  context_values.cfg  runss.options
intelAnalyzer/prototest/r000hs/data.0/: 39313-39320.0-39320.0.th  39313-39320.0-39320.0.th.aux  39313-39320.0.trace  systemcollector-39313-kathryn.sc
ioHelp/: strHelp.cpp  strHelp.h
ioHelp/pinIoSh/: pinIo.cpp  pinIo.h
ioHelp/protoHelp/: inst.pb.cc  inst.pb.h  inst_dep_record.pb.cc  inst_dep_record.pb.h  packet.pb.cc  packet.pb.h  protoio.cc  trace.pb.cc  trace.pb.h  trace.proto
models/arch/: decoder.cpp  dep.cpp  dep.h  mop_base.cpp  mop_base.h  uop_base.cpp  uop_base.h
models/arch/x86/: x86_model.md
models/inst_model/: operand.cpp  rt_instr.cpp  rt_instr.h
models/thread_model/: thread_model.h
pin/: format  makefile  makefile.rules  run.sh  tracer.cpp  tracerWithSyscall.cpp
pin/old/: compleLog  tracer.cpp
pin/src/: tracer.cpp
pin/src/analyser/: instruFunc.cpp  instruFunc.h  main_instr.cpp  main_instr.h  simd_instr.cpp  simd_instr.h
pin/src/writer/: writer.cpp  writer.h
pin/testDynOutput/: test1
pin/testProgram/: teste
pin/testStaticOutput/: test1
resMng/memMng/: MemMng.cpp  MemMng.h
resMng/regMap/: regMapper.h
src/: main.cpp
src/base/iterator/: arrayIterator.h
src/base/refVec/: refVec.h
src/base/setVec/: setVec.cpp  setVec.h
src/config/: fixed_param.h
src/core/: core.cpp  core.h  pyCore.cpp  pyCore.h
src/core/resMng/execUnit/: execUnit.cpp  execUnit.h
src/core/resMng/memMng/: MemMng.cpp  MemMng.h
src/core/resMng/regMap/: regMapper.cpp  regMapper.h
src/core/resultFrontEnd/: resultFed.cpp  resultFed.h
src/core/resultFrontEnd/legacyGem5/: resultFed_gemLagacy.cpp  resultFed_gemLagacy.h
src/core/resultFrontEnd/tbdGem5ISA/: tbdGem5ISA.cpp  tbdGem5ISA.h
src/core/tracerFrontEnd/: dynTraceVar.h  staticTraceVar.h  traceToolFed.cpp  traceToolFed.h
src/core/tracerFrontEnd/legacyPin/: lagacy_pin.cpp  lagacy_pin.h
src/core/tracers/: tracer.cpp  tracer.h  uop_wd.cpp  uop_wd.h
src/core/tracers/uopWdDepHelp/: depHelpBase.h  depHelp_issBarier.cpp  depHelp_issBarier.h  depHelp_reg.cpp  depHelp_reg.h
src/example/: simplePinGem.cpp  simplePinGem.h
src/ioHelp/: strHelp.cpp  strHelp.h
src/ioHelp/pinIoSh/: pinIo.cpp  pinIo.h
src/ioHelp/protoHelp/: inst.pb.cc  inst.pb.h  inst_dep_record.pb.cc  inst_dep_record.pb.h  mach.pb.cc  mach.pb.h  mach.proto  packet.pb.cc  packet.pb.h  protoGen.py  protoio.cc
src/models/arch/: decoder.cpp  decoder.h  dep.cpp  dep.h  mop_base.cpp  mop_base.h  uop_base.cpp  uop_base.h
src/models/arch/X86/: X86_dec.cpp  X86_dec.h  X86_mop.cpp  X86_mop.h  X86_uop.cpp  X86_uop.h
src/models/arch/pyMach/: gen_main.py
src/models/arch/x86/: x86_model.md
src/models/inst_model/: operand.cpp  operand.h  rt_instr.cpp  rt_instr.h
src/models/res_model/execUnit/: execUnit.cpp  execUnit.h
src/models/res_model/memMng/: MemMng.cpp  MemMng.h
src/models/res_model/regMap/: regMapper.cpp  regMapper.h
src/models/thread_model/: thread_model.cpp  thread_model.h
src/models/uop_model/: decoder.cpp  decoder.h  dep.cpp  dep.h  dep_base.cpp  dep_base.h  dep_simple.cpp  dep_simple.h  mop_base.cpp  mop_base.h  uop_base.cpp  uop_base.h
src/models/uop_model/X86/: X86_dec.cpp  X86_dec.h  X86_mop.cpp  X86_mop.h  X86_uop.cpp  X86_uop.h
src/models/uop_model/agent/: mop_agent.cpp  mop_agent.h  uop_agent.cpp  uop_agent.h
src/models/uop_model/dep/: dep_base.cpp  dep_base.h  dep_simple.cpp  dep_simple.h
src/models/uop_model/metaData/: metaBase.cpp  metaBase.h  metaType.cpp  metaType.h
src/models/uop_model/pyMach/: gen_main.py  simpleModel.py
src/models/uop_model/pyMachOld/: gen_main.py
src/pyBind/: mainpy.cpp
src/pyBind/py/: tbdFrontEnd.py
src/pyBind/py/base/: sysVal.py
src/pyBind/py/core/: core.py
src/pyBind/py/model/: model.py
src/stat/: statPool.cpp  statPool.h  statRecType.cpp  statRecType.h
tracerFrontEnd/: dynTraceVar.h  staticTraceVar.h  traceToolFed.cpp  traceToolFed.h
tracerFrontEnd/legacyPin/: lagacy_pin.cpp  lagacy_pin.h
tracers/: instrWd.cpp  statPool.cpp  statPool.h  tracer.cpp  tracer.h  uop_wd.cpp  uop_wd.h
util/: x86DecodeMeta.csv  x86DecodeMeta.ods  x86DecodeMeta.xls  x86MneMonicPatern.ods
util/Nextpybuild/: demo.py  x86DecodeMeta.csv  x86DecodeMeta.ods
util/statVis/: barplot.py  barplotSim.py  categoryBar.py  pieBuild.py  pieBuildb.py  test.py  visual.py
x86mdExperiment/: jumper  jumper.asm  test.asm  test2  test2.asm  x86_64  x86_64filter.py
x86mdExperiment/mnemonicReCruit/: men.py  ne  re  reF
(+153 files in other folders)
